updated class names
updated OP and ED item class names

--- a/index.html
+++ b/index.html
@@ -388,38 +388,38 @@
 
 					<div class="favorite-item"><!--OPs-->
 						<h2 class="section-heading">Anime OPs</h2>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/zzJ8U8OtEsE"><span class="song-anime">Soul Eater,</span><span class="song-title">"Resonance" by T.M. Revolution</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/lkdi6eK05OA"><span class="song-anime">Your Lie in April,</span><span class="song-title">"Hikaru Nara" by GooseHouse.</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/4J8jcI0WtzM"><span class="song-anime">Blood Blockade Battlefront,</span><span class="song-title">"Hello,world!" by Bump of Chicken</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/Eq6EYcpWB_c"><span class="song-anime">Samurai Champloo,</span><span class="song-title">"Battlecry" by Nujabes feat. Shing02</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/6CBp4qylX6I"><span class="song-anime">No Game No Life,</span><span class="song-title">"This Game" by Konomi Suzuki</span></a></div>
-						<button onclick="more_video_items_op_btn()" id="more_video_items_op_btn" class="more-video-items-btn">Show more</button>
-						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/UjjTMNDZi-A"><span class="song-anime">Death Parade,</span><span class="song-title">"Flyers" by BRADIO</span></a></div>
-						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/atxYe-nOa9w"><span class="song-anime">One Punch Man,</span><span class="song-title">"The Hero!! Set Fire to the Furious Fist" by JAM Project</span></a></div>
-						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/Ef_ZfhqN-ls"><span class="song-anime">New Game!,</span><span class="song-title">"Sakura Skip" by Fourfolium</span></a></div>
-						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/SaKdpMnwZf0"><span class="song-anime">Domestic Girlfriend,</span><span class="song-title">"Kawaki wo Ameku" by Minami</span></a></div>
-						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/7-EwChG1WTA"><span class="song-anime">Laid-Back Camp,</span><span class="song-title">"SHINY DAYS" by Asaka</span></a></div>
-						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/Ln6NpxYb73k"><span class="song-anime">Recovery of an MMO Junkie,</span><span class="song-title">"Saturday Night Question" by Megumi Nakajima</span></a></div>
-						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/4evV8Fr5A8U"><span class="song-anime">Black Clover,</span><span class="song-title">"Black Catcher" by Vickeblanka</span></a></div>
-						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/aJRu5ltxXjc"><span class="song-anime">Naruto Shippuden,</span><span class="song-title">"Blue Bird" by Ikimono Gakari</span></a></div>
-						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/aZenmeRytEM"><span class="song-anime">Noragami Aragoto,</span><span class="song-title">"Kyouran Hey Kids!" by The Oral Cigarettes</span></a></div>
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/zzJ8U8OtEsE"><span class="OP_ED-anime">Soul Eater,</span><span class="OP_ED-title">"Resonance" by T.M. Revolution</span></a></div>
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/lkdi6eK05OA"><span class="OP_ED-anime">Your Lie in April,</span><span class="OP_ED-title">"Hikaru Nara" by GooseHouse.</span></a></div>
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/4J8jcI0WtzM"><span class="OP_ED-anime">Blood Blockade Battlefront,</span><span class="OP_ED-title">"Hello,world!" by Bump of Chicken</span></a></div>
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/Eq6EYcpWB_c"><span class="OP_ED-anime">Samurai Champloo,</span><span class="OP_ED-title">"Battlecry" by Nujabes feat. Shing02</span></a></div>
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/6CBp4qylX6I"><span class="OP_ED-anime">No Game No Life,</span><span class="OP_ED-title">"This Game" by Konomi Suzuki</span></a></div>
+						<button onclick="more_OP_ED_item_op_btn()" id="more_OP_ED_item_op_btn" class="more-OP_ED-item-btn">Show more</button>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/UjjTMNDZi-A"><span class="OP_ED-anime">Death Parade,</span><span class="OP_ED-title">"Flyers" by BRADIO</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/atxYe-nOa9w"><span class="OP_ED-anime">One Punch Man,</span><span class="OP_ED-title">"The Hero!! Set Fire to the Furious Fist" by JAM Project</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/Ef_ZfhqN-ls"><span class="OP_ED-anime">New Game!,</span><span class="OP_ED-title">"Sakura Skip" by Fourfolium</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/SaKdpMnwZf0"><span class="OP_ED-anime">Domestic Girlfriend,</span><span class="OP_ED-title">"Kawaki wo Ameku" by Minami</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/7-EwChG1WTA"><span class="OP_ED-anime">Laid-Back Camp,</span><span class="OP_ED-title">"SHINY DAYS" by Asaka</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/Ln6NpxYb73k"><span class="OP_ED-anime">Recovery of an MMO Junkie,</span><span class="OP_ED-title">"Saturday Night Question" by Megumi Nakajima</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/4evV8Fr5A8U"><span class="OP_ED-anime">Black Clover,</span><span class="OP_ED-title">"Black Catcher" by Vickeblanka</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/aJRu5ltxXjc"><span class="OP_ED-anime">Naruto Shippuden,</span><span class="OP_ED-title">"Blue Bird" by Ikimono Gakari</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/aZenmeRytEM"><span class="OP_ED-anime">Noragami Aragoto,</span><span class="OP_ED-title">"Kyouran Hey Kids!" by The Oral Cigarettes</span></a></div>
 					</div><!--OPs-->
 					
 					<div class="favorite-item"><!--EDs-->
 						<h2 class="section-heading">Anime EDs</h2>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/j3SlUmr_T4g"><span class="song-anime">Blood Blockade Battlefront,</span><span class="song-title">"Sugar Song to Bitter Step" by Unison Square Garden</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/-eYK3YP524A"><span class="song-anime">Soul Eater,</span><span class="song-title">"Papermoon" by Tommy Heavenly6</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/wwQGn-5A2HE"><span class="song-anime">Fire Force,</span><span class="song-title">"Veil" by Keina Suda</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/i8Yjk7KedVg"><span class="song-anime">Mob Psycho 100,</span><span class="song-title">"Refrain Boy" by Von ALL OFF</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/2bm2WmWiohw"><span class="song-anime">Kobayashi's Dragon Maid,</span><span class="song-title">"Hukan Communication" by Yuki Kuwahara</span></a></div>					
-						<button onclick="more_video_items_ed_btn()" id="more_video_items_ed_btn" class="more-video-items-btn">Show more</button>
-						<div class="video-dropdown-item more-video-item-ed"><a class="video-header-link" href="https://youtu.be/Gdt4h0ZobfI"><span class="song-anime">K-ON!,</span><span class="song-title">"Don't Say Lazy" by Sakurakou K-ON Bu</span></a></div>
-						<div class="video-dropdown-item more-video-item-ed"><a class="video-header-link" href="https://youtu.be/6riDJMI-Y8U"><span class="song-anime">Jujutsu Kaisen,</span><span class="song-title">"Lost in Paradise" feat. AKLO by ALI</span></a></div>
-						<div class="video-dropdown-item more-video-item-ed"><a class="video-header-link" href="https://youtu.be/-rokG9XS37w"><span class="song-anime">Kaguya-sama: Love is War,</span><span class="song-title">"Chikatto Chika Chika♡"</span></a></div>
-						<div class="video-dropdown-item more-video-item-ed"><a class="video-header-link" href="https://youtu.be/o05UK9lXtC0"><span class="song-anime">Attack on Titan Season 3,</span><span class="song-title">"Requiem der Morgenröte" by Linked Horizon</span></a></div>
-						<div class="video-dropdown-item more-video-item-ed"><a class="video-header-link" href="https://youtu.be/gIGEbitYqL0"><span class="song-anime">Re:Zero,</span><span class="song-title">"Styx Helix" by Myth and Roid</span></a></div>
-						<div class="video-dropdown-item more-video-item-ed"><a class="video-header-link" href="https://youtu.be/VneknudkhAk"><span class="song-anime">Log Horizon Season 2,</span><span class="song-title">"Wonderful Wonder World" by Yun*chi</span></a></div>
-						<div class="video-dropdown-item more-video-item-ed"><a class="video-header-link" href="https://youtu.be/AubeXRKtU8U"><span class="song-anime">Konosuba Season 2,</span><span class="song-title">"Ouchi ni Kaeritai" by Amamiya, Takahashi, and Kayano</span></a></div>
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/j3SlUmr_T4g"><span class="OP_ED-anime">Blood Blockade Battlefront,</span><span class="OP_ED-title">"Sugar Song to Bitter Step" by Unison Square Garden</span></a></div>
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/-eYK3YP524A"><span class="OP_ED-anime">Soul Eater,</span><span class="OP_ED-title">"Papermoon" by Tommy Heavenly6</span></a></div>
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/wwQGn-5A2HE"><span class="OP_ED-anime">Fire Force,</span><span class="OP_ED-title">"Veil" by Keina Suda</span></a></div>
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/i8Yjk7KedVg"><span class="OP_ED-anime">Mob Psycho 100,</span><span class="OP_ED-title">"Refrain Boy" by Von ALL OFF</span></a></div>
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/2bm2WmWiohw"><span class="OP_ED-anime">Kobayashi's Dragon Maid,</span><span class="OP_ED-title">"Hukan Communication" by Yuki Kuwahara</span></a></div>					
+						<button onclick="more_OP_ED_item_ed_btn()" id="more_OP_ED_item_ed_btn" class="more-OP_ED-item-btn">Show more</button>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/Gdt4h0ZobfI"><span class="OP_ED-anime">K-ON!,</span><span class="OP_ED-title">"Don't Say Lazy" by Sakurakou K-ON Bu</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/6riDJMI-Y8U"><span class="OP_ED-anime">Jujutsu Kaisen,</span><span class="OP_ED-title">"Lost in Paradise" feat. AKLO by ALI</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/-rokG9XS37w"><span class="OP_ED-anime">Kaguya-sama: Love is War,</span><span class="OP_ED-title">"Chikatto Chika Chika♡"</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/o05UK9lXtC0"><span class="OP_ED-anime">Attack on Titan Season 3,</span><span class="OP_ED-title">"Requiem der Morgenröte" by Linked Horizon</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/gIGEbitYqL0"><span class="OP_ED-anime">Re:Zero,</span><span class="OP_ED-title">"Styx Helix" by Myth and Roid</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/VneknudkhAk"><span class="OP_ED-anime">Log Horizon Season 2,</span><span class="OP_ED-title">"Wonderful Wonder World" by Yun*chi</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/AubeXRKtU8U"><span class="OP_ED-anime">Konosuba Season 2,</span><span class="OP_ED-title">"Ouchi ni Kaeritai" by Amamiya, Takahashi, and Kayano</span></a></div>
 						<!--
 							Arslan Senkai
 							psychopass
