Updated about section

--- a/index.html
+++ b/index.html
@@ -59,24 +59,22 @@
 					<div class="about-field"><i class="far fa-calendar field-icon"></i> Watching Since 2002</div>
 					<div class="about-field"><i class="far fa-heart field-icon"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</div>
 					<div class="about-field"><i class="fas fa-place-of-worship field-icon"></i> Thighdeology</div>
+					<div class="about-field"><i class="fas fa-microphone-alt field-icon"></i> English Dubbed</div>
+					<div class="about-field"><i class="fas fa-palette field-icon"></i> Studio Bones</div>
 				</div><!-- about fields -->
 				
 				<div class="about-tags">
-					<div class="about-tag">English Dubs</div>
-					<div class="about-tag">Studio Bones</div>
-					<div class="about-tag">Tsunderes</div>
-					<div class="about-tag">Crimson Redheads</div>
-					<div class="about-tag">ZettaiRyouiki</div>
-					<div class="about-tag">Twintails</div>
-				</div><!-- about tags -->
-				<div class="about-tags">
 					<div class="about-tag">Action</div>
-					<div class="about-tag">Comedy</div>
-					<div class="about-tag">Fantasy</div>
 					<div class="about-tag">Adventure</div>
+					<div class="about-tag">Comedy</div>
+					<div class="about-tag">Crimson Redheads</div>
+					<div class="about-tag">Fantasy</div>					
 					<div class="about-tag">Romance</div>
-					<div class="about-tag">Slice of Life</div>
-				</div><!-- about tags -->				
+					<div class="about-tag">Slice of Life</div>					
+					<div class="about-tag">Tsunderes</div>
+					<div class="about-tag">Twintails</div>
+					<div class="about-tag">ZettaiRyouiki</div>
+				</div><!-- about tags -->
 			</div><!-- about -->
 
 			<div id="main">
