--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 						<h2 class="section-heading">Currently Watching</h2>
 						<div class="tiled-list scrolling-tiled-list">
 							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->
-							<a class="tile" href="https://kitsu.io/anime/black-clover-tv"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13209/large.jpg?1611504643" alt="Black Clover"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia-5th-season"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43108/large.jpg?1607694967" alt="My Hero Academia 5"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/black-clover-tv"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13209/large.jpg?1611504643" alt="Black Clover" title="Black Clover"></img><span class="tooltip">Black Cover</span></a>
+							<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia-5th-season"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43108/large.jpg?1607694967" alt="My Hero Academia 5"><span class="tooltip">My Hero Academia 5</span></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kobayashi-san-chi-no-maid-dragon-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42149/large.jpg?1597696965" alt=" Miss Kobayashi's Dragon Maid 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tokyo-revengers"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43321/large.jpg?1618109866" alt="Tokyo Revengers"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/tokyo-revengers"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43321/large.jpg?1618109866" alt="Tokyo Revengers"></img><span class="tooltip">Tokyo Revengers</span></a>
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
 
@@ -183,7 +183,7 @@
 							<a class="tile" href="https://kitsu.io/anime/shigatsu-wa-kimi-no-uso"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Your-Lie-in-April_large.jpg" alt="Your Lie in April"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/samurai-champloo"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Samurai-Champloo_large.jpg" alt="Samurai Champloo"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/new-game"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/New-Game_large.jpg" alt="New Game!"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/magi-the-labyrinth-of-magic"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Magi_large.jpg" alt="Magi: The Labyrinth of Magic"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/magi-the-labyrinth-of-magic"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Magi_large.jpg" alt="Magi: The Labyrinth of Magic"></img><span class="tooltip">Magi: The Labyrinth of Magic</span></a>
 							<a class="tile" href="https://kitsu.io/anime/akagami-no-shirayuki-hime"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Snowwhite_large.jpg" alt="Snow White with the Red Hair"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kono-subarashii-sekai-ni-shukufuku-wo"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/konosuba_large.jpg" alt="KonoSuba"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/sword-art-online"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Sword-Art-Online_large.jpg" alt="Sword Art Online"></img></a>
