--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					</div><!-- Currently Watching-->			
 
 					<div class="watching-item"><!--Movie Night-->
-						<h2 class="section-heading">Movie Night</h2>
+						<h2 class="section-heading">Movie Night Plans</h2>
 						<div class="tiled-list scrolling-tiled-list">
 							<a class="tile" href="https://kitsu.io/anime/tenki-no-ko-weathering-with-you"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42028/large.jpg?1597696900" alt="Weathering With You"></img></a>					
 							<a class="tile" href="https://kitsu.io/anime/violet-evergarden-movie"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41450/large.jpg?1597696766" alt=" Violet Evergarden the Movie"></img></a>
@@ -115,10 +115,10 @@
 							<a class="tile" href="https://kitsu.io/anime/shirobako"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/8698/large.jpg?1597696859" alt="Shirobako"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/sakurasou-no-pet-na-kanojo"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7023/large.jpg?1597696828" alt="https://media.kitsu.io/anime/poster_images/7023/large.jpg?1597696828"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/3-gatsu-no-lion"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/11380/large.jpg?1597696842" alt="March comes in like a lion"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/jaku-chara-tomozaki-kun"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42621/large.jpg?1611329334" alt="The Low Tier Character"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/fruits-basket-2019"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41995/large.jpg?1597696876" alt="Fruits Basket"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/wonder-egg-priority"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43620/large.jpg?1616155451" alt="Wonder Egg Priority"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/vivy-fluorite-eye-s-song"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43933/large.jpg?1623502875" alt="Vivy -Fluorite Eye's Song"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shadows-house"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43820/large.jpg?1621263244" alt="Shadows House"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/eighty-six"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43066/large.jpg?1618749016" alt="86"></img></a>
 						</div><!-- tiled-list -->
 					</div><!--Backlog Bingeing -->
 
@@ -132,27 +132,45 @@
 							<a class="tile" href="https://kitsu.io/anime/fena-pirate-princess"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43456/large.jpg?1627147727" alt="Fena: Pirate Princess"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/genjitsu-shugi-yuusha-no-oukoku-saikenki"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43613/large.jpg?1620025404" alt="How a Realist Hero Rebuilt the Kingdom"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/seijo-no-maryoku-wa-bannou-desu"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44115/large.jpg?1618374554" alt="The Saint's Magic Power is Omnipotent"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/eighty-six"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43066/large.jpg?1618749016" alt="86"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shadows-house"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43820/large.jpg?1621263244" alt="Shadows House"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/edens-zero"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43521/large.jpg?1617551046" alt="Edens Zero"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/edens-zero"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43268/large.jpg?1620025880" alt="The Dungeon of Black Company"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/otome-game-no-hametsu-flag-shika-nai-akuyaku-reijou-ni-tensei-shiteshimatta-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43238/large.jpg?1616427533" alt="My Next Life as a Villainess: All Routes Lead to Doom! 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shinigami-bocchan-to-kuro-maid"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44035/large.jpg?1622392850" alt="The Duke of Death and His Maid"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/uramichi-oniisan"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42658/large.jpg" alt="Life Lessons with Uramichi Oniisan"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Dub to Finish-->			
 
 					<div class="watching-item"><!--Most Anticipated-->
 						<h2 class="section-heading">Most Anticipated</h2>
+						<h3 class="section-subheading">Season Fall 2021</h3> 
+						<div class="tiled-list scrolling-tiled-list">									
+							<a class="tile" href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43907/large.jpg?1621419229" alt="Mushoku Tensei: Jobless Reincarnation 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kimetsu-no-yaiba-yuukaku-hen"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44081/large.jpg" alt="Demon Slayer 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/sword-art-online-progressive-movie-hoshi-naki-yoru-no-aria"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43546/large.jpg?1600530798" alt="Sword Art Online: Progressive Movie "></img></a>						
+							<a class="tile" href="https://kitsu.io/anime/jujutsu-kaisen-movie-0"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44212/large.jpg" alt="Jujutsu Kaisen 0 Movie"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/isekai-shokudou-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44434/large.jpg?1627559522" alt="Restaurant to Another World 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/princess-principal-crown-handler-one"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41254/large.jpg?1623161012" alt="Princess Principal Crown Handler 1 "></img></a>						
+							<a class="tile" href="https://kitsu.io/anime/komi-san-wa-komyushou-desu"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44551/large.jpg" alt="Komi Can’t Communicate"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/sekai-saikou-no-ansatsusha-isekai-kizoku-ni-tensei-suru"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44393/large.jpg" alt="he World's Finest Assassin Gets Reincarnated in Another World as an Aristocrat"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/saihate-no-paladin"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44432/large.jpg" alt="The Faraway Paladin"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/taishou-otome-otogibanashi"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43817/large.jpg" alt="Taishou Otome Otogibanashi"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/takt-op"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44233/large.jpg" alt="Takt Op."></img></a>
+							<a class="tile" href="https://kitsu.io/anime/platinum-end"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43862/large.jpg" alt="Platinum End"></img></a>						
+							<!--
+								<a class="tile" href="https://kitsu.io/anime/heike-monogatari"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/45065/large.jpg" alt="The Heike Story"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/shin-no-nakama-ja-nai-to-yuusha-no-party-wo-oidasareta-node-henkyou-de-slow-life-suru-koto-ni-shima"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44167/large.jpg" alt="Banished from the Hero's Party"></img></a>
+							-->
+						</div><!-- tiled-list -->
+						<h3 class="section-subheading">Year 2022</h3> 
 						<div class="tiled-list scrolling-tiled-list">									
 							<a class="tile" href="https://kitsu.io/anime/honzuki-no-gekokujou-shisho-ni-naru-tame-ni-wa-shudan-wo-erandeiraremasen-3rd-season"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43607/large.jpg?1628219145" alt=" Ascendance of a Bookworm 3rd Season "></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tate-no-yuusha-no-nariagari-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42530/large.jpg?1599926560" alt="The Rising of the Shield Hero 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43907/large.jpg?1621419229" alt="Mushoku Tensei: Jobless Reincarnation 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/isekai-shokudou-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44434/large.jpg?1627559522" alt="Restaurant to Another World 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/the-devil-is-a-part-timer-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44113/large.jpg?1615204263" alt=" The Devil is a Part-Timer! 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shinigami-bocchan-to-kuro-maid"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44035/large.jpg?1622392850" alt="The Duke of Death and His Maid"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tonikaku-kawaii-ova"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43832/large.jpg?1622390852" alt="Over The Moon For You OVA"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/princess-principal-crown-handler-one"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41254/large.jpg?1623161012" alt="Princess Principal Crown Handler 1 "></img></a>
-							<a class="tile" href="https://kitsu.io/anime/sword-art-online-progressive-movie-hoshi-naki-yoru-no-aria"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43546/large.jpg?1600530798" alt="Sword Art Online: Progressive Movie "></img></a>
+							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-second-season"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42951/large.jpg" alt="Made in Abyss: The Sun Blazes Upon the Golden City"></img></a>						
+							<a class="tile" href="https://kitsu.io/anime/shingeki-no-kyojin-the-final-season-part-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44240/large.jpg" alt="Attack on Titan The Final Season Part 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-movie"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44229/large.jpg?1616886372" alt="The Quintessential Quintuplets Movie"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kanojo-okarishimasu-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43588/large.jpg" alt="Rent-a-Girlfriend 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/fairy-tail-100-years-quest"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/45159/large.jpg" alt="Fairy Tail: 100 Years Quest"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/the-devil-is-a-part-timer-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44113/large.jpg?1615204263" alt=" The Devil is a Part-Timer! 2"></img></a>											
 						</div><!-- tiled-list -->
 					</div><!-- Most Anticipated -->
 				
@@ -269,7 +287,10 @@
 								<a class="tile" href="https://kitsu.io/anime/steins-gate"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Steins-Gate_large.jpg" alt="Steins Gate"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/psycho-pass"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Psycho-Pass_large.jpg" alt="Psycho-Pass"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/kekkai-sensen"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Kekkai-Sensen_large.jpg" alt="Blood Blockade Battlefront"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/kiseijuu"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Parasyte_large.jpg" alt="Parasyte the maxim"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/vivy-fluorite-eye-s-song"><img class="tile-image" src="assets/images/thumbnails/Posters/Vivy_large.jpg" alt="Vivy -Fluorite Eye's Song"></img></a>
+								<!--
+									<a class="tile" href="https://kitsu.io/anime/kiseijuu"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Parasyte_large.jpg" alt="Parasyte the maxim"></img></a>
+								-->									
 							</div>
 						</div><!--Sci-Fi-->
 						<div class="tiled-list-card">
