--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
 						</div><!-- tiled-list -->
 					</div><!-- Movie Night-->						
 
-					<div class="watching-item"><!--Backlog Bingeing-->
-						<h2 class="section-heading">Backlog Bingeing</h2>
+					<div class="watching-item"><!--Binge Watching-->
+						<h2 class="section-heading">Binge Watching</h2>
+						<h3 class="section-subheading">Backlog Bingeing</h3> 
 						<div class="tiled-list scrolling-tiled-list">											
 							<a class="tile" href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru-kan"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42194/large.jpg?1597696997" alt="My Teen Romantic Comedy SNAFU Climax"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/nichijou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/6062/large.jpg?1597696783" alt="Nichijou "></img></a>
@@ -120,10 +121,8 @@
 							<a class="tile" href="https://kitsu.io/anime/shadows-house"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43820/large.jpg?1621263244" alt="Shadows House"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/eighty-six"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43066/large.jpg?1618749016" alt="86"></img></a>
 						</div><!-- tiled-list -->
-					</div><!--Backlog Bingeing -->
 
-					<div class="watching-item"><!--Waiting To Binge-->
-						<h2 class="section-heading">Waiting for Dub to Finish</h2>
+						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
 						<div class="tiled-list scrolling-tiled-list">				
 							<a class="tile" href="https://kitsu.io/anime/fumetsu-no-anata-e"><img class="tile-image" src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b114535-jEzNgKyVxLNT.jpg" alt="To Your Eternity"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-2nd-season-part-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43361/large.jpg?1616836274" alt="That Time I Got Reincarnated as a Slime Season 2 Part 2"></img></a>
@@ -138,7 +137,7 @@
 							<a class="tile" href="https://kitsu.io/anime/shinigami-bocchan-to-kuro-maid"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44035/large.jpg?1622392850" alt="The Duke of Death and His Maid"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/uramichi-oniisan"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42658/large.jpg" alt="Life Lessons with Uramichi Oniisan"></img></a>
 						</div><!-- tiled-list -->
-					</div><!-- Dub to Finish-->			
+					</div><!-- Binge Watching -->
 
 					<div class="watching-item"><!--Most Anticipated-->
 						<h2 class="section-heading">Most Anticipated</h2>
