updated about icons

--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
 					<div class="about-field"><i class="fas fa-mars field-icon"></i> He / Him</div>
 					<div class="about-field"><i class="fas fa-birthday-cake field-icon"></i> April 17th</div>
 					<div class="about-field"><i class="fas fa-map-marker-alt field-icon"></i> Cincinnati, OH</div>
-					<div class="about-field"><i class="far fa-calendar field-icon"></i> Watching Since 2002</div>
-					<div class="about-field"><i class="far fa-heart field-icon"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</div>
+					<div class="about-field"><i class="fas fa-calendar field-icon"></i> Watching Since 2002</div>
+					<div class="about-field"><i class="fas fa-heart field-icon"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</div>
 					<div class="about-field"><i class="fas fa-place-of-worship field-icon"></i> Thighdeology</div>
 					<div class="about-field"><i class="fas fa-microphone-alt field-icon"></i> English Dubbed</div>
-					<div class="about-field"><i class="fas fa-palette field-icon"></i> Studio Bones</div>
+					<!--
+						<div class="about-field"><i class="fas fa-palette field-icon"></i> Studio Bones</div>
+					-->
 				</div><!-- about fields -->
 				
 				<div class="about-tags">
