refactor js scripts
consolidated js scripts for main page functions

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 		<link rel="stylesheet" type="text/css" href="assets/styles/meyerweb-reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/styles/stylesheet.css">
 		
+		<!--Font Awesome Icons-->
 		<link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
       integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
       crossorigin="anonymous"
     />
-		<!--media reporter-->
+		
+		<!--media reporter for testing-->
 		<!--<link rel="stylesheet" type="text/css" href="assets/styles/MediaQuery-Reporter Styles.css">-->
+
 		<!--Scripts-->
-		<script type="text/javascript" src="assets/scripts/show-more-characters.js"></script>		
-		
-		<script type="text/javascript" src="assets/scripts/tab_functions.js"></script>		
-		
+		<script type="text/javascript" src="assets/scripts/main_page_functions.js"></script>		
 	</head>
 	<body>
 		<div id="page_wrapper">
