--- a/index.html
+++ b/index.html
@@ -984,7 +984,11 @@
 				</div><!-- Anipics on Twitter -->
 			</div><!-- links and follows -->
 
-			<!-- Social -->	
+			<div id="footer">
+				<h2 class="footer-header">Hey! 👋</h2>
+				<p class="footer-text">Thanks for stopping by. Feel free to connect and chat or judge my trash taste and spaghetti code.</p>
+				<p class="copyright">&copy; 2021, All right reserved</p>
+			</div>
 			<!-- footer -->
 		</div><!--pagewrapper-->
 	</body>
