updated footer with socials

--- a/index.html
+++ b/index.html
@@ -987,6 +987,12 @@
 			<div id="footer">
 				<h2 class="footer-header">Hey! 👋</h2>
 				<p class="footer-text">Thanks for stopping by. Feel free to connect and chat or judge my trash taste and spaghetti code.</p>
+				<div id="footer_socials">
+					<a href="https://kitsu.io/users/heyKPerks" id="footer_social-kitsu"class="footer-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
+					<a href="https://twitter.com/heyKPerks" id="footer_social-twitter"class="footer-social-item"><i class="fab fa-twitter"></i></a>
+					<a href="" id="footer_social-discord" class="footer-social-item"><i class="fab fa-discord"></i></a>										
+					<a href="https://github.com/heyKPerks/MyAnimeProfile" id="footer_social-github"class="footer-social-item"><i class="fab fa-github"></i></a>
+				</div>
 				<p class="copyright">&copy; 2021, All right reserved</p>
 			</div>
 			<!-- footer -->
